fix: change image cropping

--- a/style.css
+++ b/style.css
@@ -139,7 +139,7 @@ strong {
     & img {
         border-radius: 8px;
         object-fit: cover;
-        object-position: 0 100%;
+        object-position: 0 80%;
         width: 100%;
         max-width: 600px;
         height: auto;
